--- a/inline-block/style/index.css
+++ b/inline-block/style/index.css
@@ -51,10 +51,22 @@
 
 .second-ul>li {
     background: whitesmoke;
+    position: relative;
 }
 
 .second_1-ul li {
     background: whitesmoke;
+}
+
+.second_1-ul {
+    position: absolute;
+    top: 0;
+    right: 100%;
+    display: none;
+}
+
+.li2:hover ul {
+    display: block;
 }
 
 a {
