--- a/style/index.css
+++ b/style/index.css
@@ -21,7 +21,13 @@
     gap: 120px;
 }
 
-.menu a {
+menu a {
+    color: grey;
+    text-decoration: none;
+    padding: 10px 25px;
+}
+
+.icon_link {
     color: grey;
     display: block;
     text-decoration: none;
@@ -99,4 +105,32 @@ footer {
 
 .icon_svg:hover {
     fill: bisque;
+}
+
+.menu svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 40px;
+    height: 40px;
+}
+
+.menu li:hover a {
+    color: rgb(255, 0, 140);
+}
+
+.menu li:hover svg {
+    fill: rgb(255, 0, 140);
+}
+
+.menu li:nth-child(2) {
+    padding-left: 25px;
+}
+
+.menu li:nth-child(3) {
+    padding-right: 25px;
+}
+
+.menu li {
+    font-size: 20px;
 }
