--- a/style/index.css
+++ b/style/index.css
@@ -144,6 +144,12 @@ menu a {
 .hover_me:hover {
     transition: all 2s;
     transform: translateY(0);
+
+}
+
+.hover_me:hover .hover_me_klik {
+    animation: none;
+    /* animation: name duration timing-function delay iteration-count direction fill-mode; */
 }
 
 .hover_svg a {
@@ -174,6 +180,33 @@ menu a {
     text-align: center;
     font-size: 30px;
     padding: 5px 0;
+    animation: pulse 0.5s;
+    animation-iteration-count: infinite;
+
+}
+
+
+
+@keyframes pulse {
+    0% {
+        transform: translate(1px, 0px);
+    }
+
+    10% {
+        transform: translate(-3px, 0px);
+    }
+
+    20% {
+        transform: translate(3px, 0px);
+    }
+
+    50% {
+        transform: translate(-4px, 0px);
+    }
+
+    100% {
+        transform: translate(4px, 0px);
+    }
 }
 
 footer {
